unconstructed commit but most of the features are working. I know its a bad design not to commit after every feature added.

--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -1,3 +1,13 @@
-.showcase{
-    background-image: url(/public/img/logo.jpg)
+/* body{
+    width: 20%;
 }
+.showcase{
+    background-image: url(/img/logo.jpg);
+    
+} */
+
+/* .found{
+    border-radius: 8px;
+    border: solid 1px black;
+    color : red;
+} */
