--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,65 @@
 <div class="container">
-    <div class="jumbotron showcase">
-        <h1 class="display-4">Recover stolen vehicles</h1>
-        <p class="lead">Need proffesional recovery team for your stolen vehicle. Look no further we are that team.</p>
-        <hr class="my-4">
-        <p>To report you stolen vehicle , press the following button</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="/" role="button">Report car</a>
-        </p>
+    <div class="row">
+        <div class="col">
+            <h1 class="text-warning">Login screen coming soon</h1>
+        </div>
+        <div class="col">
+            <h2 class="text-danger">The app is still in development phase</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="jumbotron showcase">
+                <h1 class="display-4">Recover stolen vehicles</h1>
+                <p class="lead">Need proffesional recovery team for your stolen vehicle. Look no further we are that team.</p>
+                <hr class="my-4">
+                <p>To report you stolen vehicle , press the following button</p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="/report" role="button">Report car</a>
+                </p>
+            </div>
+        </div>
+        
+    </div>
+    <div class="w-100"></div>
+
+    <div class="row">
+        <div class="col text-center text-success">
+            <h4>Latest testimonials:</h4>
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Siyanda M</h5>
+                    <p class="card-text">After my car was stolen, I immediately went ask people about places where people find stolen cars and i was directed to this <a href="/">site</a>. I got my car in 2 days after reporting it. I highly recommend the app</p>
+                    {{!-- <a href="#" class="btn btn-primary">Go somewhere</a> --}}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Odwa P</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    {{!-- <a href="#" class="btn btn-primary">Go somewhere</a> --}}
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Anathi M</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                        content.</p>
+                    {{!-- <a href="#" class="btn btn-primary">Go somewhere</a> --}}
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
