late night commit for the last time

--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -6,8 +6,8 @@
     
 } */
 
-/* .found{
+.found{
     border-radius: 8px;
     border: solid 1px black;
-    color : red;
-} */
+    background-color: yellow;
+}
