--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col text-center">
                 <h3>{{messages.info}}</h3>
-                <h3>{{messages.found}}</h3>
+                <h3 class="{{stylePlate}}">{{messages.found}}</h3>
         </div>
     </div>
 </div>
