--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,13 +9,13 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="jumbotron showcase">
+            <div class="jumbotron showcase text-light">
                 <h1 class="display-4">Recover stolen vehicles</h1>
                 <p class="lead">Need proffesional recovery team for your stolen vehicle. Look no further we are that team.</p>
                 <hr class="my-4">
                 <p>To report you stolen vehicle , press the following button</p>
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="/report" role="button">Report car</a>
+                    <a class="btn btn-dark btn-lg" href="/report" role="button">Report car</a>
                 </p>
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="w-100"></div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./img/siyanda.jpg" alt="Card image cap" style="height: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Siyanda M</h5>
                     <p class="card-text">After my car was stolen, I immediately went ask people about places where people find stolen cars and i was directed to this <a href="/">site</a>. I got my car in 2 days after reporting it. I highly recommend the app</p>
@@ -40,7 +40,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./img/odwa.jpg" alt="Card image cap" style="height: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Odwa P</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -51,7 +51,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./img/pam.jpg" alt="Card image cap" style="height: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Anathi M</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
