--- a/views/plates.handlebars
+++ b/views/plates.handlebars
@@ -13,20 +13,17 @@
     </div>
     <div class="w-100"></div>
     <div class="row">
-        <div class="col text-center">
-            <table class="table">
-                <h4>All town</h4>
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">{{town_name}}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{plates}}</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{town_name}}
+                </button>
+                {{#each town_list}}
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="/{{town_name}}">{{initials}}</a>
+                </div>
+                {{/each}}
+            </div>
         </div>
     </div>
 
