--- a/views/plates.handlebars
+++ b/views/plates.handlebars
@@ -13,18 +13,24 @@
     </div>
     <div class="w-100"></div>
     <div class="row">
-        <div class="col">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{town_name}}
-                </button>
-                {{#each town_list}}
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/{{town_name}}">{{initials}}</a>
-                </div>
+        <table class="table mt-5">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Location</th>
+                    <th scope="col">Plate</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each listData}}
+                <tr>
+                    <td>{{town_name}}</td>
+                    <td>{{plates}}</td>
+                    <td>{{status}}</td>
+                </tr>
                 {{/each}}
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
 
 </div>
