removed the top heading for the homepage

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="row">
+    {{!-- <div class="row">
         <div class="col">
             <h1 class="text-warning">Login screen coming soon</h1>
         </div>
         <div class="col">
             <h2 class="text-danger">The app is still in development phase</h2>
         </div>
-    </div>
+    </div> --}}
     <div class="row">
         <div class="col">
             <div class="jumbotron showcase text-light">
