--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,9 +38,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/allPlates">All plates</a>
-                            <a class="dropdown-item" href="allPlates/found">Found plates</a>
+                            <a class="dropdown-item" href="/allPlates/found">Found plates</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="allPlates/NotFound">Not found</a>
+                            <a class="dropdown-item" href="/allPlates/NotFound">Not found</a>
                         </div>
                     </li>
                 </ul>
