added the reset feature to the app

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -22,6 +22,8 @@
                 <li>Only enter registration number of the vehicle</li>
                 <li><span class="text-danger">PLEASE</span> don't enter someone else's registration number</li>
             </ul>
+            <div class="w-100"></div>
+            <a class="btn btn-danger btn-lg" href="/reset" role="button">Delete All</a>
         </div>
     </div>
 
