not much changes made

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -9,7 +9,7 @@
                         <div class="form-group">
                             <h3 for="exampleInputEmail1">License plate</h3>
                             <input type="text" class="form-control" name="username" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="enter your registration plate"
-                                pattern='[A-Z]{2,3}\s\d{3}\W\d{3}|[A-Z]{2,3}\s\d{2,3}' title="Example: ENTER VALID PLATE">
+                                pattern='[A-Z]{2,3}\s\d{3}\W\d{3}|[A-Z]{2,3}\s\d{2,3}' title="Example: CA 123-345">
                             <small id="emailHelp" class="form-text text-muted">Your registration plate will be share with
                                 eveyone</small>
                         </div>
@@ -20,7 +20,7 @@
                     <div class="dropdown pt-5">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
-                            select town {{town_name}}
+                            {{town_name}}
                         </button>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -48,7 +48,7 @@
 
     <div class="row">
         <div class="col text-center">
-            <h3>{{messages.info}}</h3>
+            <h3 class="bg-dark text-light mt-3">{{messages.info}}</h3>
             <h3 class="text-success">{{messages.found}}</h3>
         </div>
         <div class="w-100 mb-5"></div>
