--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -13,11 +13,16 @@
                             <small id="emailHelp" class="form-text text-muted">Your registration plate will be share with
                                 eveyone</small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        
                     </form>
                 </div>
                 <div class="col">
-                    <div class="dropdown pt-5">
+                    <button type="submit" class="btn btn-primary mt-5">Submit</button>
+                    
+                </div>
+
+            </div>
+            <div class="dropdown ">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             {{town_name}}
@@ -30,10 +35,8 @@
                         </div>
 
                     </div>
-                </div>
-
-            </div>
         </div>
+        
         <div class="col">
             <h5>How it works:</h5>
             <ul>
@@ -52,7 +55,7 @@
             <h3 class="text-success">{{messages.found}}</h3>
         </div>
         <div class="w-100 mb-5"></div>
-        <div class="col">
+        <div class="col text-center">
                 {{#each reg_plates}}
                 <div >
                     <h4 class="col-2 border border-dark rounded bg-warning text-center">{{plates}}</h4>
